force-app/main/default/objects/Projeto__c/fields/Id_Perfil_Alocacao_Elera__c.field-meta.xml
<CustomField>
    <fullName>Id_Perfil_Alocacao_Elera__c</fullName>
    <label>Id Perfil Alocação Elera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>