force-app/main/default/objects/Projeto__c/fields/Perfil_Alocacao__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Alocacao__c</fullName>
    <label>Perfil de Alocação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desenvolvedor</fullName>
                <label>Dev</label>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>